[package]
name = "signal_hook"
version = "0.1.0"
edition = "2024"

[dependencies]
signal-hook = "0.3.18"
signal-hook-registry = "1.4.6"
backtrace = "0.3.67"
ctor = "0.4.3"
lazy_static = "1.4"
nix = { version = "0.30.1", default-features = false, features = [
    "ptrace",
    "signal",
    "fs",
    "net",
    "feature",
    # "socket",
    "pthread",
    "term",
    "ioctl",
] }
log = { version = "0.4", features = ["std"] }
libc = "0.2.147"